# NODE-TC

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  simulate.py  train.py
src/node_tc/: __init__.py  estimator.py  model.py  plot.py  simulate.py  trainer.py  types.py
src/node_tc/simulate/: dataset.py  linear.py  simple.py
