[project]
name = "node-tc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rongzhiwei", email = "18845728185@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
